# todothis

./: .editorconfig  .gitmodules  Makefile  README.md
backend/: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt
backend/src/: main.cpp
frontend/: .editorconfig  index.html  package.json
frontend/src/: App.tsx
